router/apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__errors_from_primary_on_deferred_responses-2.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: stream.next_response().await.unwrap()
---
{
  "hasNext": false,
  "incremental": [
    {
      "data": {
        "errorField": null
      },
      "path": [
        "computer"
      ],
      "errors": [
        {
          "message": "Error field",
          "locations": [
            {
              "line": 1,
              "column": 93
            }
          ],
          "path": [
            "computer",
            "errorField"
          ]
        }
      ]
    }
  ]
}
