router/apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__errors_on_deferred_responses-2.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: stream.next_response().await.unwrap()
---
{
  "hasNext": false,
  "incremental": [
    {
      "data": {
        "name": null
      },
      "path": [
        "currentUser"
      ],
      "errors": [
        {
          "message": "error user 0",
          "path": [
            "currentUser"
          ]
        }
      ]
    }
  ]
}
