router/apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__errors_on_nullified_paths.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "foo": {
      "id": 1,
      "bar": {
        "id": 2,
        "something": null
      }
    }
  },
  "errors": [
    {
      "message": "Could not fetch bar",
      "path": [
        "foo",
        "bar"
      ],
      "extensions": {
        "code": "NOT_FOUND"
      }
    }
  ]
}
