router/apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__filter_nullified_deferred_responses-2.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: deferred
---
{
  "hasNext": true,
  "incremental": [
    {
      "data": {
        "org": null
      },
      "path": [
        "currentUser"
      ],
      "extensions": {
        "valueCompletion": [
          {
            "message": "Cannot return null for non-nullable field Organization.nonNullId",
            "path": [
              "currentUser",
              "org",
              "nonNullId"
            ]
          }
        ]
      }
    }
  ]
}
