router/apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__filter_nullified_deferred_responses-3.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: last
---
{
  "hasNext": false
}
