router/apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__missing_entities.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "currentUser": {
      "id": "0",
      "activeOrganization": {
        "id": "1",
        "name": null
      }
    }
  },
  "errors": [
    {
      "message": "error"
    }
  ]
}
